# labs-parallel-programming

./: CMakeLists.txt  Graph.cpp  Graph.h  GraphWorker.cpp  GraphWorker.h  SharedQueue.h  main.cpp
tests/: .gitignore  1.txt  seeds-main.txt  seeds-test.txt  template.txt
